# deep-learner-ai

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  database.py  main.py  settings.py
app/graph/evaluation_graph/: __init__.py  graph.py  state.py
app/graph/evaluation_graph/chain/: __init__.py  evaluator.py  feedback.py
app/graph/evaluation_graph/node/: __init__.py  evaluate.py  feedback.py  rag_answer.py  retrieve.py
app/graph/main_graph/: __init__.py  graph.py  state.py
app/graph/main_graph/chain/: chat.py  route.py
app/graph/main_graph/node/: __init__.py  chat.py  evaluation_node.py  question_generation_node.py  rag_node.py
app/graph/question_generation_graph/: __init__.py  graph.py  state.py
app/graph/question_generation_graph/chain/: __init__.py  answer_checker.py  document_checker.py  flashcard.py  generation.py  generation_router.py  hallucination_checker.py  multiple_choice.py
app/graph/rag_graph/: __init__.py  graph.py  state.py
app/middleware/: __init__.py  auth_config.py
app/model/: __init__.py  chat_message.py  document.py  user.py  workspace.py
app/router/: auth.py  chat.py  document.py  workspace.py
app/schema/: auth.py  chat.py  document.py  workspace.py
app/services/: auth_service.py  chat_service.py  dependencies.py  document_service.py  redis_memory_service.py  security.py  workspace_service.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/workspaces/: page.tsx
frontend/lib/: api.ts  store.ts
(+20 files in other folders)
