[project]
name = "deep-learner-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.0.0,<5.0.0",
    "fastapi>=0.121.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "langchain-unstructured>=0.1.5",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-redis>=0.1.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.44",
    "unstructured-client>=0.25.9",
]
